"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-09-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-95:
	  Batch of MAJOR prsim bug fixes (ACX-PR-{6655,6667}).
	  case cbit-02{,b}: previously missed pulling firing non-interfering 
		weak-rule, which left some nodes wrongly stuck at X.
	  case cbit-02c: unset failed to re-evaluate an X pull on a node,
		leaving an X-pulled node stuck at not-X!
		Also test for correct overtaking of X's behavior.
	  case cbit-02{d,e}: same as above, but cut off wordline to
		eliminate X-pull on otherwise weakly driven node.
	  Code fixes are all in the spaghetti-mess of corner-case handling 
		of event scenarios, which we hope to eliminate soon.


2011-09-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-94:
	  hacknet: new mangle option mangle_double_quote, self-explanatory.


	* HACKT-00-01-04-main-00-84-93-merged-prsim-multi-error-handling-01:
	  Just merge previous mini branch.


2011-09-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-92-prsim-multi-error-handling-01:
	  hacprsim: replaced exception mechanism with a simpler, cleaner
		aggregation of exception objects, to be able to handle
		multiple exceptions on a single-event.
		Fatal exceptions now print out the last event in watchall
		logs, test cases updated (all expect-fail).
		New command: 'exceptions' to print recent exceptions, 
			but currently not saved in checkpoints yet.  


2011-08-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-92:
	  haco: improve compiler diagnostic on "identifier already declared"
		Added test cae.


2011-08-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-91:
	  Merged prsim-precharge-check branch.


2011-08-20	David Fang		<fangism@users.sourceforge.net>
