@@ -17,9 +17,11 @@ event queue:
 expect _bl -> X queued 
 time: 24
 setting another pull-down rule on to overtake X 
+WARNING: interference `_bl'
+>> cause: `wl' (val: 1)
 	24	wl : 1
 event queue:
-	30	_bl : X	[from wlx:=1]	(weak)
+	30	_bl : X	[from wl:=1]	(weak)
 Fanins of node `_bl':
 (from [top-level]):
 [after 10]	~_pchg:1 -> _bl+:1
@@ -32,7 +34,7 @@ blst : 0	[by _bl:=1]
 step: expect pull-down to overtake previous pull down 
 WARNING: weak-interference `blst'
 >> cause: `_bl' (val: X)
-	30	_bl : X	[by wlx:=1]
+	30	_bl : X	[by wl:=1]
 event queue:
 	40	blst : X	[from _bl:=X]
 Fanins of node `_bl':
